--- a/index.html
+++ b/index.html
@@ -12,19 +12,49 @@
     <title>Paradigm Pet Professionals</title>
   </head>
   <body>
+    <!-- Navigation -->
     <div class="topnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#cats">Cats</a>
-      <a href="#dogs">Dogs</a>
-      <a href="#birds">Birds</a>
-      <a href="#fishs">Fishs</a>
-      <a href="#smallAnimals">Small Animals</a>
       <div class="search-container">
         <form action="">
           <input type="text" placeholder="Search..." />
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
       </div>
+      <a href="#smallAnimals">Small Animals</a>
+      <a href="#fishs">Fishs</a>
+      <a href="#birds">Birds</a>
+      <a href="#dogs">Dogs</a>
+      <a href="#cats">Cats</a>
+      <a href="#home" class="active">Home</a>
+      <img src="images/logo2.png" class="img-logo" alt="Paradigm Logo" srcset="">
     </div>
+
+    <!-- Landing page -->
+    <section>
+      <div class="img-container">
+        <img src="images/logo1.png" class="img-logo-main" alt="" srcset="">
+        <h3 class="img-text-center home-quote">Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet Paradigm Professionals, our mission is to offer resources to help you care for your furry, scaly, feathery, and slimy loved ones. Our pet experts—or “Pexperts”—have been working with pet owners and professionals alike for the past twelve years. They offer one-on-one consultations with current and prospective pet owners as well as group presentations designed for veterinary, pet shelter, and pet breeding professionals.</h3>
+      </div>
+    </section>
+    <!-- Landing text -->
+    <section>
+      <div class="section1">
+        <h2>Looking for basic pet care advice for the most common type of pets?</h2>
+        <h2>Need additional help determining which type of pet is right for you and your family? </h2>
+        <p>We will work with you and provide tailored evidence-based pet care to ensure lifelong health and wellness of your new companion.</p>
+      </div>
+    </section>
+    <!-- Landing images -->
+    <section>
+      <a target="_blank" href="images/cat1.jpg">
+        <img src="images/cat1.jpg" alt="" srcset="">
+      </a>
+      <a target="_blank" href="images/dog1.jpg">
+        <img src="images/dog1.jpg" alt="" srcset="">
+      </a>
+      <a target="_blank" href="images/hamster1.jpg">
+        <img src="images/hamster1.jpg" alt="" srcset="">
+      </a>
+    </section>
   </body>
 </html>
