--- a/index.html
+++ b/index.html
@@ -26,35 +26,104 @@
       <a href="#dogs">Dogs</a>
       <a href="#cats">Cats</a>
       <a href="#home" class="active">Home</a>
-      <img src="images/logo2.png" class="img-logo" alt="Paradigm Logo" srcset="">
+      <!-- LOGO IMG -->
+      <a href="index.html" class="img-logo">
+        <img src="images/logo2.png" alt="Paradigm Logo" />
+      </a>
     </div>
 
     <!-- Landing page -->
     <section>
       <div class="img-container">
-        <img src="images/logo1.png" class="img-logo-main" alt="" srcset="">
-        <h3 class="img-text-center home-quote">Pets are nature's gift to humanity. It has been scientifically proven that opening our homes and hearts to a pet increases our longevity and improves our overall quality of life as well as the lives of our pets. At Pet Paradigm Professionals, our mission is to offer resources to help you care for your furry, scaly, feathery, and slimy loved ones. Our pet experts—or “Pexperts”—have been working with pet owners and professionals alike for the past twelve years. They offer one-on-one consultations with current and prospective pet owners as well as group presentations designed for veterinary, pet shelter, and pet breeding professionals.</h3>
+        <img src="images/logo1.png" class="img-logo-main" alt="" srcset="" />
+        <h3 class="img-text-center home-quote">
+          Pets are nature's gift to humanity. It has been scientifically proven
+          that opening our homes and hearts to a pet increases our longevity and
+          improves our overall quality of life as well as the lives of our pets.
+          At Pet Paradigm Professionals, our mission is to offer resources to
+          help you care for your furry, scaly, feathery, and slimy loved ones.
+          Our pet experts—or “Pexperts”—have been working with pet owners and
+          professionals alike for the past twelve years. They offer one-on-one
+          consultations with current and prospective pet owners as well as group
+          presentations designed for veterinary, pet shelter, and pet breeding
+          professionals.
+        </h3>
       </div>
     </section>
     <!-- Landing text -->
     <section>
       <div class="section1">
-        <h2>Looking for basic pet care advice for the most common type of pets?</h2>
-        <h2>Need additional help determining which type of pet is right for you and your family? </h2>
-        <p>We will work with you and provide tailored evidence-based pet care to ensure lifelong health and wellness of your new companion.</p>
+        <h2>
+          Looking for basic pet care advice for the most common type of pets?
+        </h2>
+        <h2>
+          Need additional help determining which type of pet is right for you
+          and your family?
+        </h2>
+        <p>
+          We will work with you and provide tailored evidence-based pet care to
+          ensure lifelong health and wellness of your new companion.
+        </p>
       </div>
     </section>
     <!-- Landing images -->
-    <section>
-      <a target="_blank" href="images/cat1.jpg">
-        <img src="images/cat1.jpg" alt="" srcset="">
-      </a>
-      <a target="_blank" href="images/dog1.jpg">
-        <img src="images/dog1.jpg" alt="" srcset="">
-      </a>
-      <a target="_blank" href="images/hamster1.jpg">
-        <img src="images/hamster1.jpg" alt="" srcset="">
-      </a>
+    <section class="grid-container">
+      <div class="grid-item">
+        <div class="img-container">
+          <a
+            target="_blank"
+            class="img-on-hover img-border"
+            href="images/cat2.jpg"
+          >
+            <img src="images/cat2.jpg" alt="cat" width="400" />
+            <h3 class="pet-title">Cats</h3>
+          </a>
+        </div>
+      </div>
+
+      <div class="grid-item">
+        <a
+          target="_blank"
+          class="img-on-hover img-border"
+          href="images/dog1.jpg"
+        >
+          <img src="images/dog1.jpg" alt="dog" width="400" />
+          <h3 class="pet-title">Dogs</h3>
+        </a>
+      </div>
+
+      <div class="grid-item">
+        <a
+          target="_blank"
+          class="img-on-hover img-border"
+          href="images/hamster1.jpg"
+        >
+          <img src="images/hamster1.jpg" alt="hamster" width="400" />
+          <h3 class="pet-title">Small Animals</h3>
+        </a>
+      </div>
+
+      <div class="grid-item">
+        <a
+          target="_blank"
+          class="img-on-hover img-border"
+          href="images/fish1.jpg"
+        >
+          <img src="images/fish1.jpg" alt="fish" width="400" />
+          <h3 class="pet-title">Fishs</h3>
+        </a>
+      </div>
+
+      <div class="grid-item">
+        <a
+          target="_blank"
+          class="img-on-hover img-border"
+          href="images/bird1.jpg"
+        >
+          <img src="images/bird1.jpg" alt="bird" width="400" />
+          <h3 class="pet-title">Birds</h3>
+        </a>
+      </div>
     </section>
   </body>
 </html>
