--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -14,22 +15,21 @@
   <body>
     <!-- Navigation -->
     <div class="topnav">
+      <a href="index.html" class="img-logo">
+        <img src="images/logo2.png" alt="Paradigm Logo" />
+      </a>
+      <a href="#home" class="active">Home</a>
+      <a href="cats.html">Cats</a>
+      <a href="#dogs">Dogs</a>
+      <a href="#birds">Birds</a>
+      <a href="#fishs">Fishs</a>
+      <a href="#smallAnimals">Small Animals</a>
       <div class="search-container">
         <form action="">
           <input type="text" placeholder="Search..." />
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
       </div>
-      <a href="#smallAnimals">Small Animals</a>
-      <a href="#fishs">Fishs</a>
-      <a href="#birds">Birds</a>
-      <a href="#dogs">Dogs</a>
-      <a href="#cats">Cats</a>
-      <a href="#home" class="active">Home</a>
-      <!-- LOGO IMG -->
-      <a href="index.html" class="img-logo">
-        <img src="images/logo2.png" alt="Paradigm Logo" />
-      </a>
     </div>
 
     <!-- Landing page -->
@@ -75,7 +75,7 @@
             class="img-on-hover img-border"
             href="images/cat2.jpg"
           >
-            <img src="images/cat2.jpg" alt="cat" width="400" />
+            <img src="images/cat2.jpg" alt="cat" width="350" />
             <h3 class="pet-title">Cats</h3>
           </a>
         </div>
@@ -87,7 +87,7 @@
           class="img-on-hover img-border"
           href="images/dog1.jpg"
         >
-          <img src="images/dog1.jpg" alt="dog" width="400" />
+          <img src="images/dog1.jpg" alt="dog" width="350" />
           <h3 class="pet-title">Dogs</h3>
         </a>
       </div>
@@ -98,7 +98,7 @@
           class="img-on-hover img-border"
           href="images/hamster1.jpg"
         >
-          <img src="images/hamster1.jpg" alt="hamster" width="400" />
+          <img src="images/hamster1.jpg" alt="hamster" width="350" />
           <h3 class="pet-title">Small Animals</h3>
         </a>
       </div>
@@ -109,7 +109,7 @@
           class="img-on-hover img-border"
           href="images/fish1.jpg"
         >
-          <img src="images/fish1.jpg" alt="fish" width="400" />
+          <img src="images/fish1.jpg" alt="fish" width="350" />
           <h3 class="pet-title">Fishs</h3>
         </a>
       </div>
@@ -120,10 +120,135 @@
           class="img-on-hover img-border"
           href="images/bird1.jpg"
         >
-          <img src="images/bird1.jpg" alt="bird" width="400" />
+          <img src="images/bird1.jpg" alt="bird" width="350" />
           <h3 class="pet-title">Birds</h3>
         </a>
       </div>
+    </section>
+    <!-- Pet adoption section -->
+    <section>
+      <hr>
+      <div class="container text-left">
+        <div class="row">
+          <div class="col">
+            <h3>Adoption</h3>
+            <p>Looking for basic pet care advice for the most common type of pets? Need additional help determining which 
+              type of pet is right for you and your family? We will work with you and provide tailored evidence-based pet 
+              care to ensure lifelong health and wellness of your new companion. <br><br>
+              Looking for your new best friend? The following organizations can help you find and adopt the perfect companion:
+              <ul>
+                <li><a class="link-list-website" href="https://theshelterpetproject.org/ ">General Adoption Resources</a></li>
+                <li><a class="link-list-website" href="https://www.aspca.org/ ">ACPA</a></li>
+                <li><a class="link-list-website" href="https://www.sterlingshelter.org/humane-society/koi-fish-rescue/">Fish Rescue</a></li>
+                <li><a class="link-list-website" href="https://savethesnakes.org/snakerescuecall/">Snake Rescue</a></li>
+                <li><a class="link-list-website" href="https://ftlob.rescuegroups.org/">Bird Rescue</a></li>
+              </ul>
+              We are also happy to help you navigate the adoption process! We will guide you through each step 
+              in the process from determining which type of pet is best suited for your family and home environment, 
+              to completing the necessary paperwork, to bringing your new loved one home. Please fill out our contact form 
+              to request a consultation. We will contact you within 48 hours to schedule a consultation. All fields are required.
+            </p>
+          </div>
+        </div>  
+      </div>
+    </section>
+    <section>
+      <br>
+    <footer>
+      <div class="container">
+        <br><br>
+        <div class="row">
+          <div class="col-4">
+            <h5>Pets</h5>
+            <ul>
+              <li><a class="link-list" href="cats.html">Cats</a><lil>
+              <li><a class="link-list" href="dogs.html">Dogs</a></li>
+              <li><a class="link-list" href="smallPets.html">Snakes</a></li>
+              <li><a class="link-list" href="#">More to come...</a></li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <p>Paradigm Pet Professionals <br>
+            4321 Main St<br>
+            Example, CA 90210</p>
+            <p><b>Customer Support:</b> (123)456-7890</p>
+          </div>
+          <div class="col-4">
+            <h5>Privacy Policy</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo commodi mollitia eligendi quidem. Inventore, sint. Rerum quas in odit vitae, assumenda nostrum tempore sequi accusamus neque dicta recusandae? Eaque, ex?</p>
+            <P>Copyright 2023</P>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+        <!-- Modal -->
+    <div class="modal fade " id="consultationModal" tabindex="-1" role="dialog" aria-labelledby="consultationModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="form">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="consultationModalLabel">Consultation</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="firstName">First Name</label>
+                  <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="lastName">Last Name</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="username@gmail.com">
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="timeZone">Time Zone</label>
+                  <select id="timeZone" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="petName">Pet Name</label>
+                  <input type="text" class="form-control" id="petName" placeholder="Pet Name">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="petType">Pet Type</label>
+                  <select id="petType" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>Cat</option>
+                    <option>Dog</option>
+                    <option>Small Animal</option>
+                    <option>Other</option>
+                  </select>
+                </div>
+                <div class="form-group col-2">
+                  <label for="petAge">Pet Age</label>
+                  <input type="petAge" class="form-control" id="petAge" placeholder="Pet Age">
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </section>
   </body>
 </html>
